fixed one of the chats displayed test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input id="my-name-input" type="text" class="form-control" placeholder="Name">
                 </div>
             </div>
-        </header
+        </header>
 
         <div id="chat">
             <div class="mine messages">
@@ -79,7 +79,7 @@
             <div id="chatbar" class="input-group mb-3">
                 <input
                 type="text"
-                id="my-message"
+                id="my-message-input"
                 class="form-control"
                 placeholder="Type a message ..."
                 >
